--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.1",
   "description": "Replaces user-defined footnote strings with numbered references.",
   "main": "index.js",
-  "repository": "https://github.com/jlengstorf/gatsby-remark-numbered-footnotes.git",
-  "author": "Jason Lengstorf <jason@lengstorf.com> (https://lengstorf.com)",
+  "repository": "https://github.com/mattfeng/gatsby-remark-numbered-footnotes.git",
+  "author": "Matthew Feng <matt@incubatory.xyz>",
   "license": "MIT",
   "keywords": [
     "gatsby",
@@ -14,7 +14,10 @@
     "build": "babel src --out-dir . --ignore __tests__"
   },
   "dependencies": {
-    "remark-numbered-footnotes": "^1.0.1"
+    "lodash": "^4.17.19",
+    "remark-numbered-footnotes": "^1.0.1",
+    "unist-util-remove": "^2.0.0",
+    "unist-util-visit": "^2.0.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
